<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Number of Pax</string>
    <string name="discount">Discount (%)</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="total">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>
